--- a/public/report-design/report.css
+++ b/public/report-design/report.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&family=Prompt:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Trirong:wght@200&family=Maitree:wght@100&display=swap');
 @font-face { font-family: THSarabunNew; src: url("../font/THSarabunNew.ttf");}
 @font-face { font-family: THSarabunNewBold; src: url("../font/THSarabunNew Bold.ttf");}
-
 
 /* Style the top navigation bar */
 .topnav {
@@ -66,10 +66,17 @@
   position: relative;
   border: 2px solid red;
   width: 100%;
-  /*
-  height: 1410px;
-  max-height: 1410px;
-  */
+  font-family: 'Trirong', sans-serif;
+  font-size: 18px;
+  line-height: 20px;
+}
+
+#report-wrapper {
+  position: relative;
+  width: 1004px;
+  font-family: 'Trirong', sans-serif;
+  font-size: 20px;
+  line-height: 28px;
 }
 
 #report-item {
@@ -110,13 +117,6 @@ input[type="button"] {
   font-size: 18px;
   /* font-family: THSarabunNew; */
   font-weight: normal;
-}
-
-b, strong {font-size: 16px;}
-
-p {
-  line-height: 26px;
-  margin: 10px 0;
 }
 
 .icon-element {cursor: pointer; width: 30px; height: auto; position: absolute; display: inline-block; left: 35px;}
